--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ serde = ["serial2/serde"]
 doc = ["tokio/io-util", "serial2/doc"]
 
 [dependencies]
-serial2 = { git = "https://github.com/Znaw/serial2-rs.git", branch = "main" }
+serial2 = { git = "https://github.com/RmQcSoftware/serial2-rs.git", branch = "main" }
 tokio = { version = "1.41.0", default-features = false, features = ["net"] }
 
 [target.'cfg(unix)'.dependencies]
@@ -42,7 +42,7 @@ winapi = { version = "0.3.9", features = ["winerror"] }
 
 [dev-dependencies]
 tokio = { version = "1.32.0", features = ["macros", "rt", "io-std", "io-util"] }
-serial2 = { git = "https://github.com/Znaw/serial2-rs.git", branch = "main", features = ["rs4xx"] }
+serial2 = { git = "https://github.com/RmQcSoftware/serial2-rs.git", branch = "main", features = ["rs4xx"] }
 
 [package.metadata.docs.rs]
 features = ["doc", "doc-cfg"]
